docs: add thermodynamics statements

--- a/docs/science/thermodynamics/exercises/2016-1/p27.mdx
+++ b/docs/science/thermodynamics/exercises/2016-1/p27.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 27
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 27
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Considere un sistema cerrado del tipo cilindro pistón. ¿Cuál de las siguientes afirmaciones es siempre cierta cuando NO se realiza trabajo de expansión ni de compresión?
 
-a) $574,25$
+a) $Q=W$
 
-b) $624,25$
+b) $\Delta U=Q$
 
-c) $367,52$
+c) $\Delta U=0$
 
-d) $-624,25$
+d) $\Delta H=0$
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p27"
+  identifier="docs/science/thermodynamics/exercises/2016-1/p27"
+  title="2016-1 Termodinámica - Pregunta 27"
 />
