--- a/docs/science/thermodynamics/exercises/2016-2/p33.mdx
+++ b/docs/science/thermodynamics/exercises/2016-2/p33.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 33
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 33
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+¿Cuál es la temperatura de un sistema en equilibrio térmico con otro sistema compuesto por una mezcla de agua y vapor de agua a 1 atm de presión?
 
-a) $574,25$
+a) $0^\circ F$
 
-b) $624,25$
+b) $273 K$
 
-c) $367,52$
+c) $100^\circ C$
 
-d) $-624,25$
+d) $0 K$
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-2/p33"
+  identifier="docs/science/thermodynamics/exercises/2016-2/p33"
+  title="2016-2 Termodinámica - Pregunta 33"
 />
