--- a/docs/science/thermodynamics/exercises/2016-2/p35.mdx
+++ b/docs/science/thermodynamics/exercises/2016-2/p35.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 35
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 35
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+La propiedad de una sustancia que aumenta o disminuye cuando se le suministra o retira calor, respectivamente, de una manera reversible, es conocida como:
 
-a) $574,25$
+a) Entalpía.
 
-b) $624,25$
+b) Trabajo.
 
-c) $367,52$
+c) Entropía.
 
-d) $-624,25$
+d) Energía interna.
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-2/p35"
+  identifier="docs/science/thermodynamics/exercises/2016-2/p35"
+  title="2016-2 Termodinámica - Pregunta 35"
 />
