--- a/docs/science/thermodynamics/exercises/2017-1/p33.mdx
+++ b/docs/science/thermodynamics/exercises/2017-1/p33.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 33
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 33
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Tres objetos se encuentran a distinta temperatura. El objeto A está a $26{ }^{\circ} \mathrm{C}$, el objeto B está a $536,67^\circ \mathrm{R}$ y el objeto C está a $84,2^\circ \mathrm{F}$. Señale en orden ascendente la temperatura de los objetos mencionados:
 
-a) $574,25$
+a) A, B, C
 
-b) $624,25$
+b) B, C, A
 
-c) $367,52$
+c) C, A, B
 
-d) $-624,25$
+d) B, A, C
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2017-1/p33"
+  identifier="docs/science/thermodynamics/exercises/2017-1/p33"
+  title="2017-1 Termodinámica - Pregunta 33"
 />
