--- a/docs/science/thermodynamics/exercises/2017-1/p36.mdx
+++ b/docs/science/thermodynamics/exercises/2017-1/p36.mdx
@@ -1,23 +1,25 @@
 ---
-title: Pregunta 26
+title: Pregunta 36
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 36
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Una máquina térmica reversible opera entre $800^{\circ} \mathrm{C}$ (temperatura de la fuente) y $30^{\circ} \mathrm{C}$ (temperatura de sumidero).
 
-a) $574,25$
+Determine la mínima tasa de rechazo de calor por kW de potencia neta de la máquina.
 
-b) $624,25$
+a) $1,4 \mathrm{~kW}$
 
-c) $367,52$
+b) $0,4 \mathrm{~kW}$
 
-d) $-624,25$
+c) $1,04 \mathrm{~kW}$
+
+d) $0,04 \mathrm{~kW}$
 </div>
 
 <MDXDetails>
@@ -38,7 +40,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2017-1/p36"
+  identifier="docs/science/thermodynamics/exercises/2017-1/p36"
+  title="2017-1 Termodinámica - Pregunta 36"
 />
