--- a/docs/science/thermodynamics/exercises/2017-2/p33.mdx
+++ b/docs/science/thermodynamics/exercises/2017-2/p33.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 33
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 33
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+¿Cuál de las siguientes afirmaciones acerca de las escalas de temperatura Celsius y Kelvin es CORRECTA?
 
-a) $574,25$
+a) Ambas escalas de temperatura tienen valores negativos.
 
-b) $624,25$
+b) Un grado Kelvin tiene mayor espaciamiento que un grado Celsius.
 
-c) $367,52$
+c) Un grado Kelvin tiene el mismo espaciamiento que un grado Celsius.
 
-d) $-624,25$
+d) La escala Celsius alcanza valores mucho más altos que la escala Kelvin.
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2017-2/p33"
+  identifier="docs/science/thermodynamics/exercises/2017-2/p33"
+  title="2017-2 Termodinámica - Pregunta 33"
 />
