--- a/docs/science/thermodynamics/exercises/2017-2/p34.mdx
+++ b/docs/science/thermodynamics/exercises/2017-2/p34.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 34
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 34
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Un globo que contiene aire frío se coloca en una habitación cerrada que se encuentra a temperatura levemente más alta. El globo NO está en equilibrio térmico con el aire de la habitación HASTA que:
 
-a) $574,25$
+a) Desciende hasta el suelo.
 
-b) $624,25$
+b) Comienza a contraerse.
 
-c) $367,52$
+c) Detiene su expansión.
 
-d) $-624,25$
+d) Se eleva hasta el techo.
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2017-2/p34"
+  identifier="docs/science/thermodynamics/exercises/2017-2/p34"
+  title="2017-2 Termodinámica - Pregunta 34"
 />
