--- a/docs/science/thermodynamics/exercises/2017-2/p36.mdx
+++ b/docs/science/thermodynamics/exercises/2017-2/p36.mdx
@@ -1,23 +1,24 @@
 ---
-title: Pregunta 26
+title: Pregunta 36
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 36
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Se tienen 2 motores térmicos reversibles; el primero de ellos opera entre $1000^{\circ} \mathrm{C}$ y T2, mientras que el segundo opera entre T2 y $400^{\circ} \mathrm{C}$.
+El valor de T2 para que el trabajo de ambos motores sea el mismo es aproximadamente:
 
-a) $574,25$
+a) $1400^{\circ} \mathrm{C}$
 
-b) $624,25$
+b) $700^{\circ} \mathrm{C}$
 
-c) $367,52$
+c) $600^{\circ} \mathrm{C}$
 
-d) $-624,25$
+d) $300^{\circ} \mathrm{C}$
 </div>
 
 <MDXDetails>
@@ -38,7 +39,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2017-2/p36"
+  identifier="docs/science/thermodynamics/exercises/2017-2/p36"
+  title="2017-2 Termodinámica - Pregunta 36"
 />
