--- a/docs/science/thermodynamics/exercises/2018-1/p33.mdx
+++ b/docs/science/thermodynamics/exercises/2018-1/p33.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 33
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 33
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Un termómetro de mercurio posee un rango de medición que va desde los $-35^{\circ} \mathrm{C}$ hasta los $280^{\circ} \mathrm{C}$. Indique cuantos grados $^\circ$ R es capaz de medir el termómetro.
 
-a) $574,25$
+a) 428,7
 
-b) $624,25$
+b) 1424,3
 
-c) $367,52$
+c) 995,7
 
-d) $-624,25$
+d) 567,0
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2018-1/p33"
+  identifier="docs/science/thermodynamics/exercises/2018-1/p33"
+  title="2018-1 Termodinámica - Pregunta 33"
 />
