--- a/docs/science/thermodynamics/exercises/2018-1/p35.mdx
+++ b/docs/science/thermodynamics/exercises/2018-1/p35.mdx
@@ -1,23 +1,31 @@
 ---
-title: Pregunta 26
+title: Pregunta 35
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 35
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Un sistema cerrado realiza los procesos en cuasi equilibrio mostrados en la siguiente figura.
 
-a) $574,25$
+<Image
+  src="science/thermodynamics/exercises/2018-1/p35/image.png"
+  alt="Pregunta 35"
+  width="40%"
+/>
 
-b) $624,25$
+Indique cual es el trabajo realizado por el sistema:
 
-c) $367,52$
+a) 170 kJ
 
-d) $-624,25$
+b) 200 kJ
+
+c) 120 kJ
+
+d) 150 kJ
 </div>
 
 <MDXDetails>
@@ -38,7 +46,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2018-1/p35"
+  identifier="docs/science/thermodynamics/exercises/2018-1/p35"
+  title="2018-1 Termodinámica - Pregunta 35"
 />
