--- a/docs/science/thermodynamics/exercises/2018-1/p36.mdx
+++ b/docs/science/thermodynamics/exercises/2018-1/p36.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 36
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 36
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Si el coeficiente de operación de un ciclo de Carnot invertido de refrigeración es de 0,25. Indique cual sería la eficiencia del ciclo, si este se invirtiera.
 
-a) $574,25$
+a) $25 \%$
 
-b) $624,25$
+b) $100 \%$
 
-c) $367,52$
+c) $80 \%$
 
-d) $-624,25$
+d) $20 \%$
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2018-1/p36"
+  identifier="docs/science/thermodynamics/exercises/2018-1/p36"
+  title="2018-1 Termodinámica - Pregunta 36"
 />
