--- a/docs/science/thermodynamics/exercises/2018-2/p30.mdx
+++ b/docs/science/thermodynamics/exercises/2018-2/p30.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 30
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 30
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Una pera pierde 5 kJ de calor por cada ${ }^{\circ} \mathrm{C}$ que cae la temperatura, la cantidad de calor perdida por cada ${ }^{\circ} \mathrm{F}$ es de:
 
-a) $574,25$
+a) $2,7 \mathrm{~kJ}$
 
-b) $624,25$
+b) $9 \mathrm{~kJ}$
 
-c) $367,52$
+c) $1,8 \mathrm{~kJ}$
 
-d) $-624,25$
+d) $5 \mathrm{~kJ}$
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2018-2/p30"
+  identifier="docs/science/thermodynamics/exercises/2018-2/p30"
+  title="2018-2 Termodinámica - Pregunta 30"
 />
