--- a/docs/science/thermodynamics/exercises/2018-2/p32.mdx
+++ b/docs/science/thermodynamics/exercises/2018-2/p32.mdx
@@ -1,23 +1,25 @@
 ---
-title: Pregunta 26
+title: Pregunta 32
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 32
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Una corriente de aire ingresa a una tubería de 28 cm de diámetro a 200 kPa y $20^{\circ} \mathrm{C}$ a una velocidad de $5 \mathrm{~m} / \mathrm{s}$. Considere $R=0,287 \mathrm{~kJ} / \mathrm{kg} \mathrm{K}$.
 
-a) $574,25$
+Determine el flujo másico de la corriente:
 
-b) $624,25$
+a) $10,72 \mathrm{~kg} / \mathrm{s}$
 
-c) $367,52$
+b) $2,92 \mathrm{~kg} / \mathrm{s}$
 
-d) $-624,25$
+c) $42,88 \mathrm{~kg} / \mathrm{s}$
+ 
+d) $0,73 \mathrm{~kg} / \mathrm{s}$
 </div>
 
 <MDXDetails>
@@ -38,7 +40,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2018-2/p32"
+  identifier="docs/science/thermodynamics/exercises/2018-2/p32"
+  title="2018-2 Termodinámica - Pregunta 32"
 />
