--- a/docs/science/thermodynamics/exercises/2019-1/p22.mdx
+++ b/docs/science/thermodynamics/exercises/2019-1/p22.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 22
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 22
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Indique cuál es el efecto esperado en el tamaño del orificio de un anillo de oro, si lo coloca en el freezer de su casa, a medida que baja la temperatura del anillo.
 
-a) $574,25$
+a) El tamaño del orificio se mantiene igual.
 
-b) $624,25$
+b) El tamaño del orificio disminuye.
 
-c) $367,52$
+c) El tamaño del orificio aumenta.
 
-d) $-624,25$
+d) No es posible determinar la respuesta con los datos entregados.
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2019-1/p22"
+  identifier="docs/science/thermodynamics/exercises/2019-1/p22"
+  title="2019-1 Termodinámica - Pregunta 22"
 />
