--- a/docs/science/thermodynamics/exercises/2019-1/p24.mdx
+++ b/docs/science/thermodynamics/exercises/2019-1/p24.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 24
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 24
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Indique qué ocurre con la entropía mientras más probable es la ocurrencia de un estado de equilibrio.
 
-a) $574,25$
+a) La entropía es máxima.
 
-b) $624,25$
+b) La entropía es mínima.
 
-c) $367,52$
+c) La entropía se mantiene constante.
 
-d) $-624,25$
+d) Ninguna de las alternativas anteriores.
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2019-1/p24"
+  identifier="docs/science/thermodynamics/exercises/2019-1/p24"
+  title="2019-1 Termodinámica - Pregunta 24"
 />
