--- a/docs/science/thermodynamics/exercises/2019-1/p25.mdx
+++ b/docs/science/thermodynamics/exercises/2019-1/p25.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 25
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 25
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Durante un proceso de adición de calor isotérmico de un ciclo de carnot, 1.000 kJ de calor se agregan al fluido de trabajo desde una fuente que se encuentra a $500^\circ \mathrm{C}$. Determine el cambio de entropía del fluido de trabajo.
 
-a) $574,25$
+a) $2 \mathrm{~kJ} / \mathrm{K}$
 
-b) $624,25$
+b) $1,3 \mathrm{~kJ} / \mathrm{K}$
 
-c) $367,52$
+c) $-0,5 \mathrm{~kJ} / \mathrm{K}$
 
-d) $-624,25$
+d) $0,8 \mathrm{~kJ} / \mathrm{K}$
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2019-1/p25"
+  identifier="docs/science/thermodynamics/exercises/2019-1/p25"
+  title="2019-1 Termodinámica - Pregunta 25"
 />
