--- a/docs/science/thermodynamics/exercises/2019-2/p23.mdx
+++ b/docs/science/thermodynamics/exercises/2019-2/p23.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 23
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 23
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+A cuál de las siguientes temperaturas la superficie de un lago se encuentra congelada.
 
-a) $574,25$
+a) $41 ^\circ \mathrm{F}$
 
-b) $624,25$
+b) $2 ^\circ \mathrm{C}$
 
-c) $367,52$
+c) $482 ^\circ \mathrm{R}$
 
-d) $-624,25$
+d) $280 \ K$
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2019-2/p23"
+  identifier="docs/science/thermodynamics/exercises/2019-2/p23"
+  title="2019-2 Termodinámica - Pregunta 23"
 />
