--- a/docs/science/thermodynamics/exercises/2019-2/p24.mdx
+++ b/docs/science/thermodynamics/exercises/2019-2/p24.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 24
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 24
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Para que dos cuerpos se encuentren en equilibrio térmico, indique cuál de las siguientes propiedades debe ser la misma en todo el sistema.
 
-a) $574,25$
+a) Presión
 
-b) $624,25$
+b) Calor específico
 
-c) $367,52$
+c) Volumen
 
-d) $-624,25$
+d) Temperatura
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2019-2/p24"
+  identifier="docs/science/thermodynamics/exercises/2019-2/p24"
+  title="2019-2 Termodinámica - Pregunta 24"
 />
