--- a/docs/science/thermodynamics/exercises/2019-2/p25.mdx
+++ b/docs/science/thermodynamics/exercises/2019-2/p25.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 25
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 25
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Un gas ideal realiza un proceso isocórico en un sistema cerrado. El calor transferido y el trabajo están dados por:
 
-a) $574,25$
+a) $C_p \Delta T, R \ln (T_2 / T_1)$
 
-b) $624,25$
+b) $C_v \Delta T, R \Delta T$
 
-c) $367,52$
+c) $0, C_p \Delta T$
 
-d) $-624,25$
+d) $C_v \Delta T, 0$
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2019-2/p25"
+  identifier="docs/science/thermodynamics/exercises/2019-2/p25"
+  title="2019-2 Termodinámica - Pregunta 25"
 />
