--- a/docs/science/thermodynamics/exercises/2023-2/p36.mdx
+++ b/docs/science/thermodynamics/exercises/2023-2/p36.mdx
@@ -1,23 +1,25 @@
 ---
-title: Pregunta 26
+title: Pregunta 36
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 36
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Un gas ideal que inicialmente se encuentra a 200 K experimenta una expansión isobárica a $2,5 \mathrm{kPa}$, aumentando su volumen de $2 \mathrm{~m}^3$ a $4 \mathrm{~m}^3, 20 \mathrm{~kJ}$ se transfieren al gas por calor.
 
-a) $574,25$
+Indique cuál será la temperatura final del gas.
 
-b) $624,25$
+a) 15 K
 
-c) $367,52$
+b) 100 K
 
-d) $-624,25$
+c) 200 K
+
+d) 400 K
 </div>
 
 <MDXDetails>
@@ -38,7 +40,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2023-2/p36"
+  identifier="docs/science/thermodynamics/exercises/2023-2/p36"
+  title="2023-2 Termodinámica - Pregunta 36"
 />
