--- a/docs/science/thermodynamics/exercises/2023-2/p37.mdx
+++ b/docs/science/thermodynamics/exercises/2023-2/p37.mdx
@@ -1,23 +1,24 @@
 ---
-title: Pregunta 26
+title: Pregunta 37
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 37
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
 
-a) $574,25$
+Estime utilizando las tablas de vapor del Handbook, la entropía específica de una corriente que se encuentra a $0,6 \mathrm{MPa}$ y $700^{\circ} \mathrm{C}$.
 
-b) $624,25$
+a) $3,925 \ \mathrm{KJ} / \mathrm{KgK}$
 
-c) $367,52$
+b) $8,4996 \ \mathrm{KJ} / \mathrm{KgK}$
 
-d) $-624,25$
+c) $8,7367 \ \mathrm{KJ} / \mathrm{KgK}$
+
+d) $8,5107 \ \mathrm{KJ} / \mathrm{KgK}$
 </div>
 
 <MDXDetails>
@@ -38,7 +39,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2023-2/p37"
+  identifier="docs/science/thermodynamics/exercises/2023-2/p37"
+  title="2023-2 Termodinámica - Pregunta 37"
 />
