--- a/docs/science/thermodynamics/exercises/2023-2/p38.mdx
+++ b/docs/science/thermodynamics/exercises/2023-2/p38.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 38
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 38
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Responda la siguiente pregunta utilizando las tablas de vapor que se presentan en el Handbook. Si una corriente se encuentra como líquido saturado a $235^{\circ} \mathrm{C}$. Indique cuál es el valor más cercano de la entalpía de la corriente:
 
-a) $574,25$
+a) $2,6558 \mathrm{~kJ} / \mathrm{kg}$
 
-b) $624,25$
+b) $1.009,89 \mathrm{~kJ} / \mathrm{kg}$
 
-c) $367,52$
+c) $2.804,2 \mathrm{~kJ} / \mathrm{kg}$
 
-d) $-624,25$
+d) $1.013,62 \mathrm{~kJ} / \mathrm{kg}$
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2023-2/p38"
+  identifier="docs/science/thermodynamics/exercises/2023-2/p38"
+  title="2023-2 Termodinámica - Pregunta 38"
 />
