--- a/docs/science/thermodynamics/exercises/2023-2/p39.mdx
+++ b/docs/science/thermodynamics/exercises/2023-2/p39.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 39
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 39
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Responda la siguiente pregunta utilizando las tablas de vapor que se presentan en el Handbook. Para una mezcla liquido-vapor que se encuentra a una temperatura $195^{\circ} \mathrm{C}$ y su entalpía es 1.500 $\mathrm{kJ} / \mathrm{kg}$. Indique cuál es el valor más cercano de la calidad $(x)$ de la corriente:
 
-a) $574,25$
+a) 0,34
 
-b) $624,25$
+b) 1
 
-c) $367,52$
+c) 0
 
-d) $-624,25$
+d) 0,5
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2023-2/p39"
+  identifier="docs/science/thermodynamics/exercises/2023-2/p39"
+  title="2023-2 Termodinámica - Pregunta 39"
 />
