--- a/docs/science/thermodynamics/exercises/2024-2/p34.mdx
+++ b/docs/science/thermodynamics/exercises/2024-2/p34.mdx
@@ -1,23 +1,30 @@
 ---
-title: Pregunta 26
+title: Pregunta 34
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 34
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Se tienen cuatro vasos con diferentes líquidos y se reportaron por alguna razón las siguientes temperaturas para los líquidos:
 
-a) $574,25$
+DATOS:
+$$
+T_A =536,67 \ ^\circ \mathrm{R} \quad T_B =10 \ ^{\circ} \mathrm{C} \quad T_C =293,15\mathrm{~K} \quad T_D=122 \ ^{\circ} \mathrm{F}
+$$
 
-b) $624,25$
+Ordene las temperaturas de mayor a menor.
 
-c) $367,52$
+a) $T_C>T_B>T_D>T_A$
 
-d) $-624,25$
+b) $T_D>T_A>T_C>T_B$
+
+c) $T_A>T_B>T_C>T_D$
+
+d) $T_D>T_C>T_B>T_A$
 </div>
 
 <MDXDetails>
@@ -38,7 +45,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2024-2/p34"
+  identifier="docs/science/thermodynamics/exercises/2024-2/p34"
+  title="2024-2 Termodinámica - Pregunta 34"
 />
