--- a/docs/science/thermodynamics/exercises/2024-2/p36.mdx
+++ b/docs/science/thermodynamics/exercises/2024-2/p36.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 36
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 36
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Para un gas ideal que se somete a un proceso a volumen constante, el trabajo y la transferencia de calor son respectivamente:
 
-a) $574,25$
+a) $0,-\mathrm{C}_P  \Delta T$
 
-b) $624,25$
+b) $P \left(V_2-V_1\right), C_V  \Delta T$
 
-c) $367,52$
+c) $\mathrm{C}_V  \Delta P, R  \Delta T$
 
-d) $-624,25$
+d) $0, \mathrm{C}_V  \Delta T$
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2024-2/p36"
+  identifier="docs/science/thermodynamics/exercises/2024-2/p36"
+  title="2024-2 Termodinámica - Pregunta 36"
 />
