--- a/docs/science/thermodynamics/exercises/2024-2/p37.mdx
+++ b/docs/science/thermodynamics/exercises/2024-2/p37.mdx
@@ -1,23 +1,24 @@
 ---
-title: Pregunta 26
+title: Pregunta 37
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 37
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
 
-a) $574,25$
+Cuando un sólido se derrite y se convierte en un líquido, ¿qué ocurre con la entropía del sistema?
 
-b) $624,25$
+a) La entropía aumenta.
 
-c) $367,52$
+b) La entropía disminuye.
 
-d) $-624,25$
+c) La entropía se mantiene constante.
+
+d) No se puede determinar que ocurre con la entropía.
 </div>
 
 <MDXDetails>
@@ -38,7 +39,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2024-2/p37"
+  identifier="docs/science/thermodynamics/exercises/2024-2/p37"
+  title="2024-2 Termodinámica - Pregunta 37"
 />
