--- a/docs/science/thermodynamics/exercises/2024-2/p38.mdx
+++ b/docs/science/thermodynamics/exercises/2024-2/p38.mdx
@@ -1,23 +1,25 @@
 ---
-title: Pregunta 26
+title: Pregunta 38
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 38
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+En termodinámica se designa como proceso adiabático aquel sistema que no intercambia calor con su entorno o alrededores.
 
-a) $574,25$
+Luego, el cambio de entropía en un proceso adiabático será:
 
-b) $624,25$
+a) Mayor a cero.
 
-c) $367,52$
+b) Igual a cero.
 
-d) $-624,25$
+c) Mayor o igual a cero.
+
+d) Menor o igual a cero.
 </div>
 
 <MDXDetails>
@@ -38,7 +40,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2024-2/p38"
+  identifier="docs/science/thermodynamics/exercises/2024-2/p38"
+  title="2024-2 Termodinámica - Pregunta 38"
 />
