--- a/docs/science/thermodynamics/exercises/2024-2/p39.mdx
+++ b/docs/science/thermodynamics/exercises/2024-2/p39.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 39
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 39
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Una corriente de agua se encuentra a $200^{\circ} \mathrm{C}$ y tiene una densidad de $52 \mathrm{~kg} / \mathrm{m}^3$. ¿En qué estado se encuentra la corriente?
 
-a) $574,25$
+a) Líquido saturado.
 
-b) $624,25$
+b) Vapor sobrecalentado.
 
-c) $367,52$
+c) Mezcla líquido vapor.
 
-d) $-624,25$
+d) Vapor saturado.
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2024-2/p39"
+  identifier="docs/science/thermodynamics/exercises/2024-2/p39"
+  title="2024-2 Termodinámica - Pregunta 39"
 />
