--- a/docs/science/thermodynamics/exercises/2016-1/p28.mdx
+++ b/docs/science/thermodynamics/exercises/2016-1/p28.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 28
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 28
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Responda la siguiente pregunta utilizando las tablas de vapor que se presentan en el Handbook. Si la corriente inicialmente se encuentra a $200^{\circ} \mathrm{C}$ y posee una presión de 1 MPa. Indique en qué estado se encuentra la corriente:
 
-a) $574,25$
+a) líquido subenfriado
 
-b) $624,25$
+b) líquido saturado
 
-c) $367,52$
+c) vapor saturado
 
-d) $-624,25$
+d) vapor sobrecalentado
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p28"
+  identifier="docs/science/thermodynamics/exercises/2016-1/p28"
+  title="2016-1 Termodinámica - Pregunta 28"
 />
