--- a/docs/science/thermodynamics/exercises/2016-2/p36.mdx
+++ b/docs/science/thermodynamics/exercises/2016-2/p36.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 36
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 36
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Considere una bomba de calor de Carnot que posee un coeficiente de operación de 10. Indique cual es el valor más cercano, para la razón entre la temperatura absoluta más baja y más alta:
 
-a) $574,25$
+a) 1,1
 
-b) $624,25$
+b) 0,9
 
-c) $367,52$
+c) 1,5
 
-d) $-624,25$
+d) 0,8
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-2/p36"
+  identifier="docs/science/thermodynamics/exercises/2016-2/p36"
+  title="2016-2 Termodinámica - Pregunta 36"
 />
