--- a/docs/science/thermodynamics/exercises/2017-1/p35.mdx
+++ b/docs/science/thermodynamics/exercises/2017-1/p35.mdx
@@ -1,23 +1,23 @@
 ---
-title: Pregunta 26
+title: Pregunta 35
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 35
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Indique cuál de las siguientes afirmaciones es correcta respecto a la segunda ley de la termodinámica, para un proceso irreversible.
 
-a) $574,25$
+a) La entropía total del universo se debe incrementar.
 
-b) $624,25$
+b) La entropía total del universo debe disminuir.
 
-c) $367,52$
+c) Cuando el estado de un sistema cambia su entropía se debe incrementar.
 
-d) $-624,25$
+d) Cuando el estado de un sistema cambia su entropía debe disminuir.
 </div>
 
 <MDXDetails>
@@ -38,7 +38,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2017-1/p35"
+  identifier="docs/science/thermodynamics/exercises/2017-1/p35"
+  title="2017-1 Termodinámica - Pregunta 35"
 />
