--- a/docs/science/thermodynamics/exercises/2024-2/p35.mdx
+++ b/docs/science/thermodynamics/exercises/2024-2/p35.mdx
@@ -1,23 +1,25 @@
 ---
-title: Pregunta 26
+title: Pregunta 35
 ---
 
 import Image from "@site/src/components/Image";
 import MDXDetails from "@site/src/components/MDXDetails";
 import Disqus from '@site/src/components/Disqus';
 
-# Pregunta 26
+# Pregunta 35
 
 <div className="exercise">
-Determine a qué temperatura son iguales (valores numéricos) las escalas Kelvin y Farenheit.
+Suponga que un cuerpo $A$ entra en contacto con un cuerpo $B$ cuando no hay transferencia de calor a los alrededores y que al inicio $T_A > T_B$.
 
-a) $574,25$
+Al pasar un tiempo prolongado, se espera que la temperatura de $B$ sea:
 
-b) $624,25$
+a) Mayor que la de $A$.
 
-c) $367,52$
+b) Menor que la temperatura inicial de $B$.
 
-d) $-624,25$
+c) Igual que la de $A$.
+
+d) El cero absoluto.
 </div>
 
 <MDXDetails>
@@ -38,7 +40,7 @@ un Pull Request en el [repositorio](https://github.com/crow-rojas/apuntes-fundam
 ### Comentarios
 
 <Disqus
-  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2016-1/p26"
-  identifier="docs/science/thermodynamics/exercises/2016-1/p26"
-  title="2016-1 Termodinámica - Pregunta 26"
+  url="https://crow-rojas.github.io/apuntes-fundamentals/docs/science/thermodynamics/exercises/2024-2/p35"
+  identifier="docs/science/thermodynamics/exercises/2024-2/p35"
+  title="2024-2 Termodinámica - Pregunta 35"
 />
